--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+body{
+  background-image: url(assets/bg.jpg);
+  background-size: cover;
+}
+
+#page{
+  width: 800px;
+  padding: 24px;
+  margin: 48px auto;
+  background-color: #F0E8C2;
+  box-sizing: border-box;
+  border-radius: 24px;
+}
+
 img{
   border-radius: 16px;
 }
