--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 #page{
   width: 800px;
   padding: 24px;
-  margin: 48px auto;
+  margin: 48px auto 28px;
   background-color: #F0E8C2;
   box-sizing: border-box;
   border-radius: 24px;
@@ -56,4 +56,13 @@ h1, h2{
 
 ul{
   padding-left: 26px;
+}
+footer{
+  color: #F0E8C2;
+  text-align: center;
+  padding-bottom: 48px;
+}
+
+footer img{
+  vertical-align: middle;
 }
